# DataFlow-Preview

./: .gitignore  .gitmodules  README-zh.md  README.md  README.zh-CN.md  __init__.py  pipeline_step.py  pyproject.toml  requirement_rag.txt  requirements-all.txt  requirements-muxi.txt  requirements-text.txt  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: 1-bug-reports.yaml  2-ask-for-help.yaml
.github/workflows/: test.yml
dataflow/: __init__.py  cli.py  logger.py  version.py
dataflow/cli_funcs/: cli_env.py  cli_init.py  copy_funcs.py  paths.py
dataflow/core/: Generator.py  LLMServing.py  __init__.py
dataflow/example/GeneralTextPipeline/: pt_input.jsonl
dataflow/generators/: APIGenerator_aisuite.py  APIGenerator_request.py  LocalModelGenerator.py  __init__.py
dataflow/llmserving/: APILLMServing_aisuite.py  APILLMServing_request.py  LocalModelLLMServing.py  __init__.py
dataflow/operators/: __init__.py
dataflow/operators/db/: db_operator.py
dataflow/operators/eval/: __init__.py
dataflow/operators/generate/: __init__.py
dataflow/operators/process/: __init__.py
dataflow/operators/refine/: __init__.py
dataflow/prompts/: agenticrag.py  kbcleaning.py
dataflow/utils/: APIGenerator_aisuite.py  APIGenerator_request.py  Generator.py  LocalModelGenerator.py  Operator.py  Registry.py  Storage.py  __init__.py  registry.py  storage.py  utils.py
dataflow/utils/reasoning_utils/: AnswerExtraction.py  Generator.py  Operator.py  Prompts.py
test/: pytest.ini  test_agentic_rag.py  test_db_storage_and_operator.py  test_general_text.py  test_pipelines.py  test_ragkbcleaning.py  test_reasoning.py  test_reasoning_pretrain.py  test_register.py  test_remote_load.py  test_text.py
test/cpu_only/: test_register.py
(+57 files in other folders)
