[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "open-dataflow"
authors = [
    {name = "Hao Liang", email = "hao.liang@stu.pku.edu.cn"},
    {name = "Xiaochen Ma", email = "xiaochen.ma.cs@gmail.com"},
]
description = "Placeholder for open-dataflow."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.7, <4"
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: Free For Educational Use",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
]
keywords = [
    "AI",
    "artificial intelligence",
]
dynamic = ["version", "dependencies"]

[project.urls]
Github = "https://github.com/Open-DataFlow/DataFlow"
Documentation = "https://open-dataflow.github.io/DataFlow-Doc/"
"Bug Reports" = "https://github.com/Open-DataFlow/DataFlow/issues"

[project.entry-points."console_scripts"]
dataflow = "dataflow.cli:main"

[tool.setuptools]
include-package-data = true
packages = ["dataflow"]  # 显式指定主包


[tool.setuptools.dynamic]
version = {attr = "dataflow.version.__version__"}
dependencies = {file = "requirements.txt"}
optional-dependencies = { all = {file = "requirements-all.txt"}, text = {file = "requirements-text.txt"}, min = {file = "requirements-min.txt"} }